--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/beketov-dmitry/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/beketov-dmitry/frontend-project-lvl2/actions)",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "type": "module",
+  "scripts": {
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/beketov-dmitry/frontend-project-lvl2.git"
@@ -21,6 +21,17 @@
   },
   "homepage": "https://github.com/beketov-dmitry/frontend-project-lvl2#readme",
   "dependencies": {
-    "commander": "^9.4.1"
+    "-": "^0.0.1",
+    "commander": "^9.4.1",
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.0.1",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.2",
+    "jest": "^29.1.2"
   }
 }
