--- a/.github/workflows/myActions.yml
+++ b/.github/workflows/myActions.yml
@@ -4,7 +4,6 @@ name: Node CI
 # Trigger the workflow on push or pull request
 on:
   - push
-  - pull_request
 
 env:
   CI: true
@@ -39,7 +38,7 @@ jobs:
        - name: Test & publish code coverage
       #   # Publish code coverage on Code Climate
       #   # https://github.com/paambaati/codeclimate-action
-      #   uses: paambaati/codeclimate-action@v3.0.0
+          uses: paambaati/codeclimate-action@v3.0.0
       #   # Add Code Climate secret key
        env:
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
