--- a/.github/workflows/myActions.yml
+++ b/.github/workflows/myActions.yml
@@ -1,36 +1,27 @@
-# Name of workflow
+
 name: Node CI
 
-# Trigger the workflow on push or pull request
-on:
-  - push
 
-env:
-  CI: true
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          node-version: '14.x'
       - run: make install
-      - run: make lint
       - run: make test
-       - name: Test & publish code coverage
-          uses: paambaati/codeclimate-action@v3.0.0
-       env:
-        CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-       with:
-         coverageCommand: make test-coverage
+      - run: make lint
+      - name: code coverage
+        uses: paambaati/codeclimate-action@v3.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
           debug: true
